--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "prettier:full": "prettier --write **/*.{ts,html,scss,json,js}",
+    "prettier:staged": "pretty-quick --staged",
+    "prepare": "husky"
   },
   "private": true,
   "dependencies": {
@@ -28,11 +31,14 @@
     "@angular/compiler-cli": "^18.0.0",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
+    "husky": "~9.1.4",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "prettier": "~3.3.3",
+    "pretty-quick": "~4.0.0",
     "typescript": "~5.4.2"
   }
 }
